<resources>
    <string name="app_name">DKT_Group_Beta</string>
    <string name="currency">€</string>
    <string name="balance">Kontostand:</string>
    <string name="joker">Joker:</string>
    <string name="User">Benutzername: </string>
    <string name="connection">Search Games</string>
    <string name="lobby_header">Game Lobby</string>
    <string name="Login">Login</string>

    <string name="ip_address">ws://192.168.0.171:8080/websocket-example-handler</string>
<!--    <string name="ip_address">ws://se2-demo.aau.at:53210/websocket-example-handler</string>-->
    <string name="search_for_games">Search for Games</string>
    <string name="games">Games</string>
    <string name="description_scrollview_gamelist">Shows all avialable Games</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_setReady">Ready</string>
    <string name="btn_leaveGame">Leave</string>
    <string name="btn_startGame">Start</string>
    <string name="create_game_input_dialog">Game Name</string>
    <string name="create_game_btn_create">Create</string>
    <string name="create_game_btn_cancel">Cancel</string>
    <string name="btn_is_ready">Ready</string>
    <string name="btn_is_not_ready">Not Ready</string>
    <string name="dialog_positive">Ok</string>
    <string name="dialog_start_game_header">Attention!</string>
</resources>