<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameSearch">

    <TextView
        android:id="@+id/txt_gameLobbyHeader"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:maxLines="1"
        android:text="@string/lobby_header"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollview_GameLobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:id="@+id/scrollview_GameLobby"
        android:layout_width="628dp"
        android:layout_height="180dp"
        android:background="#EED5D2"
        android:contentDescription="@string/description_scrollview_gamelist"
        app:layout_constraintBottom_toTopOf="@+id/layout_gameLobby_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_gameLobbyHeader"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/scrollview_gameLobby_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_gameLobby_btn"
        android:layout_width="628dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview_GameLobby"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_leave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_leaveGame"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_setReady"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:focusable="true"
            android:text="@string/btn_setReady"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>