<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameSearch">

    <TextView
        android:id="@+id/verbindungID"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:maxLines="1"
        android:text="@string/connection"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_createNew"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="628dp"
        android:layout_height="180dp"
        android:background="#EED5D2"
        android:contentDescription="@string/description_scrollview_gamelist"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verbindungID"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/scrollview_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="628dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_refresh"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:text="@string/btn_refresh"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_connect"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:backgroundTint="#FF0000"
            android:focusable="true"
            android:text="@string/btn_connect"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_createNew"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:backgroundTint="#959595"
        android:text="Create New"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toEndOf="@+id/verbindungID"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>