<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#818979"
    tools:context=".activities.GameBoard">


    <!-- field -->

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="495dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:background="#c7b8b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field16"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"

        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/field17"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field18"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/field19"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field20"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field21"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field22"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field23"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="315dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field24"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field25"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="405dp"
        android:layout_marginTop="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@id/field16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/field26"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"

        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintStart_toEndOf="@+id/field25"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- endOfTop-->


    <!-- field -->

    <ImageView
        android:id="@+id/field11"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"

        />


    <ImageView
        android:id="@+id/field10"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field9"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />


    <ImageView
        android:id="@+id/field8"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="135dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />


    <!-- picture from: 430.700+ Grafiken, lizenzfreie Vektorgrafiken und Clipart zu Schiff -  iStock | Boot, Segelschiff, Kreuzfahrtschiff https://images.app.goo.gl/TN7sypqozZqoLsAa6-->
    <ImageView
        android:id="@+id/field7"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field6"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="225dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field5"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="270dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />


    <!-- picture from:https://www.mountainsport.at/wp-content/uploads/2019/03/logo-pyko.jpg -->
    <ImageView
        android:id="@+id/field4"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="315dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field3"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="360dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field2"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="405dp"
        android:layout_marginBottom="5dp"
        android:rotationX="-360"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <ImageView
        android:id="@+id/field1"
        android:layout_width="45dp"
        android:layout_height="90dp"
        android:layout_marginStart="450dp"
        android:layout_marginBottom="5dp"

        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintStart_toStartOf="@id/field11" />

    <!-- endOfBottom-->


    <!-- field-->

    <!--
<ImageView
    android:id="@id/field16"
    android:layout_width="90dp"
    android:layout_height="44dp"
    android:layout_marginStart="80dp"
    android:layout_marginTop="95dp"
    android:rotation="360"
    android:rotationX="360"
    android:rotationY="360"
    android:scaleType="fitXY"
   :layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
-->

    <ImageView
        android:id="@+id/field15"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@id/field17" />

    <ImageView
        android:id="@+id/field14"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotationX="-360"
        android:rotationY="360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field15" />

    <ImageView
        android:id="@+id/field13"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotationX="-360"
        android:rotationY="360"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field14" />


    <ImageView
        android:id="@+id/field12"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field13" />


    <!-- endOffield-->


    <!-- field-->


    <ImageView
        android:id="@+id/field27"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotation="180"
        android:rotationX="180"
        android:rotationY="-180"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field26" />


    <ImageView
        android:id="@+id/field28"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotation="180"
        android:rotationX="180"
        android:rotationY="-180"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field27" />


    <ImageView
        android:id="@+id/field29"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotation="180"
        android:rotationX="180"
        android:rotationY="-180"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field28" />

    <ImageView
        android:id="@+id/field30"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:rotation="180"
        android:rotationX="-180"
        android:rotationY="180"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintTop_toBottomOf="@+id/field29" />


    <!-- endOffield-->

    <!-- MITTE-->
    <ImageView
        android:id="@+id/risiko_mitte"
        android:layout_width="65dp"
        android:layout_height="78dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintBottom_toTopOf="@+id/field8"
        app:layout_constraintStart_toEndOf="@+id/field13"
        app:layout_constraintTop_toBottomOf="@+id/field19"
        app:srcCompat="@drawable/field3" />


    <ImageView
        android:id="@+id/bank_mitte"
        android:layout_width="65dp"
        android:layout_height="78dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintBottom_toTopOf="@+id/field5"
        app:layout_constraintEnd_toStartOf="@+id/field29"
        app:layout_constraintTop_toBottomOf="@+id/field22"
        app:srcCompat="@drawable/field16" />


    <!--  ENDMITTE-->


    <!-- Seitenmenü-->


    <EditText
        android:id="@+id/money"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="350dp"
        android:ems="8"
        android:hint="1000"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/balance"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jokeramount"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:ems="8"
        android:hint="1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="44dp"
        android:text="@string/currency"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toEndOf="@+id/field26"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />


    <!-- Anzeige für die Besitztümer-->
    <!--    <ScrollView-->
    <!--        android:layout_width="337dp"-->
    <!--        android:layout_height="287dp"-->
    <!--        android:layout_marginEnd="1dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        tools:layout_editor_absoluteY="123dp"-->
    <!--        tools:ignore="MissingConstraints">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical" />-->
    <!--    </ScrollView>-->

    <!-- ende Besitztümer-->

    <!-- Ende Seitenmenü-->


    <TextView
        android:id="@+id/joker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/joker"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/jokeramount"
        app:layout_constraintTop_toBottomOf="@+id/balance" />

    <Button
        android:id="@+id/popUpCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:backgroundTint="#FF0000"
        android:text="See All Cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="@+id/fragment_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />




</androidx.constraintlayout.widget.ConstraintLayout>

